<resources>
    <string name="app_name">PONapp</string>
    <string name="title_athlete">Atlet</string>
    <string name="title_sports">Cabang</string>
    <string name="title_medals">Medali</string>
    <string name="title_schedule">Jadwal</string>
    <string name="bullet">\u2022</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_news">Berita</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="headline">Lantik Pengurus Baru, Perbasasi DKI Jakarta Target Tambah Emas di PON 2020</string>
</resources>
