<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/title_news"/>

    <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/ic_calendar_range_outline"
            android:title="@string/title_schedule"/>

    <item
            android:id="@+id/navigation_medals"
            android:icon="@drawable/ic_medal"
            android:title="@string/title_medals"/>

    <item
            android:id="@+id/navigation_sports"
            android:icon="@drawable/ic_dribbble"
            android:title="@string/title_sports"/>

    <item
        android:id="@+id/navigation_atheletes"
        android:icon="@drawable/ic_account_outline"
        android:title="@string/title_athlete"/>

</menu>
